<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title_hint_event"
        android:textColor="#FFFFFF"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/event_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/event_description"
        android:textColor="#FFFFFF"
        android:inputType="textMultiLine" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/tv_reminder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/reminder_time_hour"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="time"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/reminder_time_minute"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="time"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/tv_start" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/start_time_hour"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="time"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/start_time_minute"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="time"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/tv_end" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/end_time_hour"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="time"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/end_time_minute"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="time"
                    android:maxLength="2"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/btn_event" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>